--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,8 @@ services:
   redis:
     image: redis:latest
     container_name: pretix_redis
+    volumes:
+      - "${DATA_DIR}/redis:/data"
     expose:
       - 6379
     networks:
