--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,7 +49,7 @@ services:
       - traefik.http.routers.pretix-sec.rule=Host(`pretix.${DOMAINNAME}`)
       - traefik.http.routers.pretix-sec.tls=true
       - traefik.http.routers.pretix-sec.tls.certresolver=myresolver
-      - traefik.http.routers.pretix.middlewares=secheader
+      - traefik.http.routers.pretix.middlewares=secheader@file
       - traefik.http.services.pretix.loadbalancer.server.port=80
 
 networks:
