--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   database:
-    image: postgres:9.6-alpine
+    image: postgres
     restart: unless-stopped
     container_name: pretix_database
     expose:
