--- a/env.sample
+++ b/env.sample
@@ -1,5 +1,7 @@
 DATA_DIR=./docker/volumes/pretix
 DOMAINNAME=docker.localhost
+SERVICENAME=pretix
+
 POSTGRES_PASSWORD=superdupersecret
 POSTGRES_USER=pretix
 POSTGRES_DB=pretix
