--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       - 6379
 
   app:
-    image: local/${SERVICENAME}
+    image: ghcr.io/mind-hochschul-netzwerk/pretix:latest
     restart: unless-stopped
     container_name: ${SERVICENAME}
     depends_on:
